# my_test_fastapi_poetry_docker

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/processors/: backside_worker.py
app/routers/: class_router.py  welcome.py
my_try_webapi/: main.py
old_files/: Dockerfile
tests/: test_main.py
