[tool.poetry]
name = "my-webapi"
version = "0.1.0"
description = ""
authors = ["torupa <xpt77@outlook.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
